--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -10,3 +10,12 @@
   width: 100vh;
   height: 100vh;
 }
+
+.particles {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: -1;
+}
