added landnig page cards

--- a/frontend/src/components/banner/Banner.css
+++ b/frontend/src/components/banner/Banner.css
@@ -1,6 +1,7 @@
-.jumbo{
-    background-color: aqua;
-}
-.h1{
-    color: aqua;
+#jumbo{
+    background-image: url(https://d3v5ezchayoty7.cloudfront.net/wp-content/uploads/2018/09/20191649/Budget-Blog-Banner.jpg);
+    background-position: center; /* Center the image */
+    background-repeat: no-repeat; /* Do not repeat the image */
+    background-size: cover; /* Resize the background image to cover the entire container */
+    min-height: 350px;
 }
